# dune-curvilineargeometry

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README  config.h.cmake  configure.ac  dune-curvilineargeometry.pc.in  dune.module
cmake/modules/: CMakeLists.txt  Makefile.am
doc/: Makefile.am
doc/doxygen/: Doxylocal
doc/latex/: curvilinear-element-interpolation-documentation.aux  curvilinear-element-interpolation-documentation.out  curvilinear-element-interpolation-documentation.tex  lagrange-geometry-documentation.aux  lagrange-geometry-documentation.out  lagrange-geometry-documentation.tex  numerical-integration-methods-summary.tex
doc/sage-scripts/: EdgeLagrangePolynomials.sage~  TetrahedralLagrangePolynomials.sage~  TriangleLagrangePolynomials.sage~  renumber-gmsh.cpp~
doc/sage-scripts/Interpolation/: EdgeLagrangePolynomials.py  EdgeLagrangePolynomials.sage  TetrahedralLagrangePolynomials.py  TetrahedralLagrangePolynomials.sage  TriangleLagrangePolynomials.sage  renumber-gmsh.cpp  tetrahedral_log.txt  triangle_log.txt
dune/: CMakeLists.txt  Makefile.am
dune/curvilineargeometry/: CMakeLists.txt  CMakeLists.txt~  Makefile.am  curvilineargeometry.hh  curvilineargeometry.hh~
dune/curvilineargeometry/integration/: CMakeLists.txt  adaptiveintegrator.hh  integrationhelper.hh  numericalElementIntegrator.hh~  numericalrecursiveinterpolationintegrator.hh  quadratureabsolutevalue.hh  quadratureintegrator.hh  quadraturerelativeerror.hh  quadraturetypedef.hh
dune/curvilineargeometry/interpolation/: CMakeLists.txt  CMakeLists.txt~  curvilinearelementinterpolator.hh  curvilinearelementinterpolator.hh~  curvilineargeometryhelper.hh  differentialhelper.hh  lagrangeinterpolator.hh  pointlocation.hh  polynomial.hh  polynomial.hh~  polynomialfieldvector.hh
dune/curvilineargeometry/optimization/: optimization.hh
dune/curvilineargeometry/test/: CMakeLists.txt  CMakeLists.txt~  Makefile.am  Makefile.am~  test-adaptiveintegration.cc  test-curvilinearelementinterpolation.cc  test-curvilinearelementinterpolation.cc~  test-curvilineargeometry.cc  test-lagrangegeometry.cc~  test-lagrangeinterpolation.cc  test-polynomial.cc  test-polynomial.cc~  test-polynomialvector.cc  test-quadratureintegration-matrix.cc  test-quadratureintegration-speed.cc  test-quadratureintegration.cc  test-recursiveinterpolationintegration.cc  test-recursiveinterpolationintegration.cc~
dune/curvilineargeometry/utility/: CMakeLists.txt  curvilinearsingularityhelper.hh  curvilinearvaliditycheck.hh
m4/: CMakeLists.txt  Makefile.am  dune-curvilineargeometry.m4
src/: CMakeLists.txt  Makefile.am  dune_curvilineargeometry.cc
